--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,10 @@ POSTGRES_PORT=5432
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 POSTGRES_DB=kpd_db
+POSTGRES_PGDATA=/var/lib/postgresql/data/pgdata
+
+DEPLOY_USER=nmihalyov
+DEPLOY_HOST=mih
+DEPLOY_PATH=/home/nmihalyov/kpd/backend
+DEPLOY_REF=origin/main
+DEPLOY_REPO=https://github.com/nmihalyov/nodejs-docker-and-compose
