--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,7 @@ COPY . .
 RUN npm run build
 
 # Stage 2
-FROM nginx:1.23.1-alpine
+FROM nginx:latest
 COPY --from=build /app/build /usr/share/nginx/html
 COPY nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
